[package]
name = "livesport-display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["time-driver"]}
embassy-time = "0.3.1"
panic-probe = "0.3.2"
