[package]
name = "livesport-display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["time-driver"]}
embassy-time = "0.3.1"
panic-probe = "0.3.2"
cyw43 = "0.2.0"
cyw43-pio = "0.2.0"
embassy-net = { version = "0.4.0", features = ["dns", "medium-ethernet", "proto-ipv4", "tcp", "dhcpv4"] }
rand = { version = "0.8.5", default-features = false }
reqwless = { version = "0.12.1", features = ["defmt"]}
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
