[package]
name = "livesport-display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7"}
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
panic-probe = "0.3.2"
cyw43 = "0.2.0"
cyw43-pio = "0.2.0"
rand = { version = "0.8.5", default-features = false }
reqwless = { version = "0.12.1", features = ["defmt"]}
serde = { version = "1.0.206", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
static_cell = "2.1.0"
portable-atomic = { version = "1.7", features = ["critical-section"] }
embassy-sync = "0.6.0"

[profile.dev]
lto = true
opt-level = "z"

[profile.release]
lto = true
opt-level = 3
